--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "amfe-flexible": "^2.2.1",
+    "axios": "^1.3.3",
     "core-js": "^3.28.0",
     "vant": "^2.12.54",
     "vue": "^2.6.14",
@@ -31,6 +33,7 @@
     "less": "^4.0.0",
     "less-loader": "^8.0.0",
     "lint-staged": "^11.1.2",
+    "postcss-pxtorem": "^6.0.0",
     "vue-template-compiler": "^2.6.14"
   },
   "gitHooks": {
