--- a/service/conf/config.yaml
+++ b/service/conf/config.yaml
@@ -17,7 +17,7 @@ log:
   max_backups: 7
 mysql:
   host: ""
-  port: 63916
+  port: 
   user: "root"
   password: ""
   dbname: "decentralized_social_platforms"
